ajustando grid e fale conosco

--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
     box-sizing: border-box;
     font-family: 'Archivo', sans-serif;
 }
+html{
+    scroll-behavior: smooth;
+}
 body{
     width: 100%;
 }
@@ -293,7 +296,7 @@ body{
     grid-template: "a b c d"
                     "e e e e"
                     "f f g g";
-    height: 90vh;
+    height: 150vh;
     align-items: center;
 }
 .conteudo-doacoes-site{
@@ -333,7 +336,30 @@ body{
     text-align: center;
 }
 
+.conteudo-doacoes-site, .conteudo-doacoes-videos, .conteudo-doacoes-pedidos, .conteudo-doacoes-doacoes, .conteudo-doacoes-presente, .conteudo-doacoes-pix, .conteudo-doacoes-imgpix{
+    border: whitesmoke solid 2px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.conteudo-doacoes-imgpix{
+    background-color: aliceblue;
+}
+
 /* FIM - Doações */
+
+/* Fale conosco */
+
+.contato-sbt{
+    font-family: 'Fredoka', sans-serif;
+    color: rgb(184, 187, 194);
+    text-shadow: #ffffff 0.5px 0 0.2px;
+    font-weight: 300;
+    padding: 1.3vh;
+}
+
+/* FIM - Fale conosco */
 
 /* Fim Main- Conteudo principal */
 
